--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,14 +3,18 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 18
+      nodejs: 20
     commands:
-      - npm install
+      - echo "Installing dependencies..."
+      - npm ci
   build:
     commands:
+      - echo "Building the application..."
       - npm run build
+      - echo "Build completed successfully!"
 
 artifacts:
   files:
     - '**/*'
   base-directory: dist
+  discard-paths: no
